# coursebinder-ai-ready-google-classroom-exporter

./: .gitignore  LICENSE  README.md
docs/: AI_ARCHIVE_SCHEMA.md  ARCHITECTURE.md  CHROME_WEB_STORE_SUBMISSION.md  INSTALL_NATIVE_HOST.md  NO_API_DESIGN.md  PRIVACY.md  PRIVACY_POLICY.md
extension/: .gitignore  package-lock.json  package.json  wxt.config.ts
extension/src/entrypoints/: background.ts  classroom.content.ts
extension/src/entrypoints/popup/: index.html  main.tsx  style.css
extension/src/lib/downloads/: downloadQueue.test.ts  downloadQueue.ts
extension/src/lib/extractors/: assignmentPage.ts  attachmentClassifier.ts  classroomPage.test.ts  classroomPage.ts
extension/src/lib/fallback/: fallbackExport.test.ts  fallbackExport.ts
extension/src/lib/native/: nativeClient.ts
native/: pyproject.toml
native/classroom_ai_exporter/: __init__.py  host.py  install_native_host.py
native/classroom_ai_exporter/archive/: __init__.py  paths.py  schema.py  writer.py
native/classroom_ai_exporter/index/: __init__.py  chunker.py  sqlite_fts.py
native/classroom_ai_exporter/mcp/: __init__.py  server.py
native/classroom_ai_exporter/parsers/: __init__.py  docx.py  html.py  pdf.py  pptx.py  xlsx.py
native/classroom_ai_exporter/security/: __init__.py  sanitizer.py
native/classroom_ai_exporter/takeout/: __init__.py  importer.py  normalizer.py
tests/: __init__.py
tests/fixtures/: classroom_assignment_page.html
tests/native/: __init__.py  test_archive_writer.py
